<resources>
    <string name="app_name">ListingOption</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="convenience">Convenience</string>
    <string name="grocery_text">Grocery</string>
    <string name="find_store_by_name">Find store by name</string>
    <string name="curbside">Curbside</string>
    <string name="catering">Catering</string>
    <string name="pick_up">Pick Up</string>
    <string name="delivery">Delivery</string>
    <string name="_58">58</string>
    <string name="stores_open">stores Open</string>
    <string name="grocery">Grocery</string>
    <string name="vegetarian_pizza">Vegetarian Pizza</string>
    <string name="_10_15min">10 - 15min</string>
    <string name="notifications">Notifications</string>
    <string name="this_is_the_search_fragment">This is the search fragment</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="takeaways">Takeaways</string>

    <string-array name="branches">
        <item>225 Central Park West, NY 10024, USA</item>
        <item>226 Central Park West, NY 10024, USA</item>
        <item>227 Central Park West, NY 10024, USA</item>
        <item>228 Central Park West, NY 10024, USA</item>
        <item>229 Central Park West, NY 10024, USA</item>
        <item>230 Central Park West, NY 10024, USA</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">This is the profile Fragment</string>
    <string name="hint_spinner">225 Central Park West, NY 10024, USA</string>
    <string name="address">225 Central Park West, NY 10024, USA</string>

</resources>