<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/fragment_home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewToolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:cardElevation="4dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout

                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/imageViewPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:elevation="@dimen/dp_16"
                    android:src="@drawable/ic_indicator_place"
                    app:layout_constraintBottom_toBottomOf="@+id/spinner"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/spinner" />

                <com.skydoves.powerspinner.PowerSpinnerView
                    android:id="@+id/spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/dp_16"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:textColor="#353536"
                    android:hint="@string/address"
                    android:textColorHint="@color/black"
                    android:textSize="14.5sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:spinner_arrow_animate="true"
                    app:spinner_arrow_animate_duration="250"
                    app:spinner_arrow_drawable="@drawable/ic_arrow_down"
                    app:spinner_arrow_gravity="end"
                    app:spinner_arrow_padding="8dp"
                    app:spinner_arrow_tint="@android:color/black"
                    app:spinner_divider_color="@android:color/darker_gray"
                    app:spinner_divider_show="true"
                    app:spinner_divider_size="0.4dp"
                    app:spinner_item_array="@array/branches"
                    app:spinner_popup_animation="fade"
                    app:spinner_popup_background="@android:color/white"
                    app:spinner_popup_elevation="14dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="@dimen/dp_12"
            android:id="@+id/btnDelivery"
            style="@style/btn_delivery_style"
            app:layout_constraintHorizontal_weight="1.5"
            android:layout_marginTop="18dp"
            android:text="@string/delivery"
            app:cornerRadius="@dimen/dp_20"
            app:layout_constraintEnd_toStartOf="@+id/btn_pick_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewToolBar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_pick_up"
            app:layout_constraintHorizontal_weight="1"
            style="@style/btn_pick_up_style"
            android:text="@string/pick_up"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/dp_20"
            app:layout_constraintEnd_toStartOf="@+id/btn_catering"
            app:layout_constraintStart_toEndOf="@+id/btnDelivery"
            app:layout_constraintTop_toTopOf="@+id/btnDelivery" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_catering"
            app:layout_constraintHorizontal_weight="1"
            style="@style/btn_catering_style"
            android:text="@string/catering"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/dp_20"
            app:layout_constraintEnd_toStartOf="@+id/btn_curbside"
            app:layout_constraintStart_toEndOf="@+id/btn_pick_up"
            app:layout_constraintTop_toTopOf="@+id/btn_pick_up" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_curbside"
            android:layout_marginEnd="@dimen/dp_12"
            app:layout_constraintHorizontal_weight="1"
            style="@style/btn_curbuside_style"
            android:text="@string/curbside"
            app:backgroundTint="@color/white"
            app:cornerRadius="@dimen/dp_20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_catering"
            app:layout_constraintTop_toTopOf="@+id/btn_catering" />

        <RelativeLayout
            android:id="@+id/relativeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnDelivery">

            <requestFocus />

            <EditText
                android:id="@+id/editText"
                style="@style/edit_search_style"
                android:hint="@string/find_store_by_name" />
        </RelativeLayout>

        <FrameLayout
            android:id="@+id/main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeContainer" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
